# extract-emails

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml  tox.ini
.codex/skills/agents-md-assistant/: SKILL.md
.codex/skills/agents-md-assistant/references/: agents_md_template.md
.codex/skills/code-review-assistant/: SKILL.md
.codex/skills/code-review-assistant/references/: code_review_rules.md
.codex/skills/debug-logging-assistant/: SKILL.md
.codex/skills/debug-logging-assistant/references/: logging_rules.md
.codex/skills/format-lint-assistant/: SKILL.md
.codex/skills/format-lint-assistant/references/: linting_rules.md
.codex/skills/git-commit-assistant/: SKILL.md
.codex/skills/git-commit-assistant/references/: commit_rules.md
.codex/skills/google-docstring-assistant/: SKILL.md
.codex/skills/google-docstring-assistant/references/: google_docstring_rules.md
.codex/skills/pytest-testing-assistant/: SKILL.md
.codex/skills/pytest-testing-assistant/references/: pytest_rules.md
.codex/skills/uv-package-management-assistant/: SKILL.md
.codex/skills/uv-package-management-assistant/references/: uv_rules.md
.cursor/commands/: git-commit.md
.cursor/rules/: docs.mdc  general.mdc  tests.mdc  uv.mdc
.github/workflows/: docs-deploy.yml  publish.yml  test.yml
.rules/: code-rules.md
assets/copy-to-llm/: copy-to-llm.css  copy-to-llm.js
changelogs/v5/: index.html
code/browsers/: index.html
code/data_extractors/: index.html
code/errors/: index.html
code/factories/: index.html
code/link_filters/: index.html
code/models/: index.html
code/utils/: index.html
code/workers/: index.html
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.md  index.rst  py-modindex.html  search.html  searchindex.js
docs/changelogs/: v5.md
docs/code/: browsers.md  data_extractors.md  errors.md  factories.md  filters.md  link_filters.md  main_extractor.md  models.md  utils.md  workers.md
docs/docs/doctrees/: environment.pickle
docs/docs/html/: genindex.html
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
docs/quick_start/: intro.md  logs.md  save_data.md
extract_emails/: __init__.py  email.py  extract_emails.py  factory.py  main_extractor.py  top_level_domains.pkl
extract_emails/browsers/: __init__.py  browser_interface.py  chrome_browser.py  chromium_browser.py  httpx_browser.py  page_source_getter.py  requests_browser.py
extract_emails/console/: application.py
extract_emails/data_extractors/: __init__.py  advanced_email_extractor.py  data_extractor.py  default_html_handler.py  email_extractor.py  linkedin_extractor.py
extract_emails/data_savers/: __init__.py  csv_saver.py  data_saver.py
extract_emails/email_filters/: __init__.py  default_email_filter.py  domains.py  email_filter_interface.py
extract_emails/errors/: __init__.py  errors.py
extract_emails/factories/: __init__.py  base_factory.py  contact_filter_and_email.py  contact_filter_and_email_and_linkedin.py  contact_filter_and_linkedin.py  default_filter_and_email.py  default_filter_and_email_and_linkedin.py  default_filter_and_linkedin.py  ifactory.py
extract_emails/filters/: __init__.py  default_email_filter.py  domains.py  ifilter.py
extract_emails/html_handlers/: __init__.py  default_html_handler.py  html_handler_interface.py
extract_emails/link_filters/: __init__.py  contact_link_filter.py  default_link_filter.py  link_filter_base.py  link_filter_interface.py
extract_emails/models/: __init__.py  page_data.py
extract_emails/page_source_getters/: httpx_getter.py  page_source_getter.py  types.py
extract_emails/utils/: __init__.py  email_filter.py
extract_emails/workers/: __init__.py  base_worker.py  default_worker.py
quick_start/intro/: index.html
quick_start/logs/: index.html
quick_start/save_data/: index.html
search/: search_index.json
test/: test_email.py  test_email_extractor.py
test/test_browsers/: test_chrome_browser.py  test_requests_browser.py
test/test_email_filters/: test_default_email_filter.py
test/test_html_handlers/: test_default_html_handler.py
test/test_link_filters/: test_default_link_filter.py
tests/browsers/: test_chrome_browser.py  test_requests_browser.py
tests/data_extractors/: test_email_extractor.py  test_linkedin_extractor.py
tests/link_filters/: test_contact_link_filter.py  test_default_link_filter.py  test_link_filter_base.py
tests/models/: test_page_data.py
tests/utils/: test_email_filter.py
