[project]
name = "extract-emails"
version = "6.0.0"
requires-python = ">=3.10,<3.14"
description = "Extract email addresses and linkedin profiles from given URL."
authors = [
  {name = "Dmitrii K", email = "dmitriik@proton.me"}
]
readme = "README.md"
keywords = ["parser", "email", "linkedin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.52.0",
    "pydantic>=2.11.7",
]

[project.urls]
repository = "https://github.com/dmitriiweb/extract-emails"
documentation = "https://dmitriiweb.github.io/extract-emails"

[project.optional-dependencies]
dev = [
    "jinja2>=3.1.6",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mypy>=1.16.1",
    "pygments>=2.19.1",
    "pytest>=8.4.1",
    "pytest-async>=0.1.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "tox>=4.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
extract-emails = "extract_emails.console.application:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"